@startuml
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0

package "sistema" {
  class SistemaConsultas {
    +SistemaConsultas()
    +List<Votante> getVotantes()
    +List<ConsultaCiudadana> getConsultas()
    +Map<String,Integer> obtenerEstadisticasEdad()
    +void guardarDatos()
    +void generarReporteVotantes(String rutaCSV)
  }

  class Votante {
    -String rut
    -String nombre
    -int edad
    -String direccion
    +String getRut()
    +String getNombre()
    +int getEdad()
    +String getDireccion()
  }

  class ConsultaCiudadana {
    -String nombre
    -String descripcion
    -LocalDate fecha
    -List<Tema> temas
    +String getNombre()
    +String getDescripcion()
    +LocalDate getFecha()
    +List<Tema> getTemas()
  }

  class Tema {
    -String nombre
    -String descripcion
    -List<Pregunta> preguntas
    +String getNombre()
    +String getDescripcion()
    +List<Pregunta> getPreguntas()
  }

  class Pregunta {
    -String texto
    -String tipoRespuesta
    +String getTexto()
    +String getTipoRespuesta()
  }

  SistemaConsultas o-- "0..*" Votante
  SistemaConsultas o-- "0..*" ConsultaCiudadana
  ConsultaCiudadana o-- "0..*" Tema
  Tema *-- "0..*" Pregunta
}

package "gui" {
  class VentanaPrincipal
  class VentanaGestionVotantes
  class VentanaGestionConsultas
  class VentanaRegistrarVoto
  class VentanaResultados
  class VentanaFiltrarVotantes
  class VentanaBuscarElemento
}

VentanaPrincipal ..> SistemaConsultas
VentanaGestionVotantes ..> SistemaConsultas
VentanaGestionConsultas ..> SistemaConsultas
VentanaRegistrarVoto ..> SistemaConsultas
VentanaResultados ..> SistemaConsultas
VentanaFiltrarVotantes ..> SistemaConsultas
VentanaBuscarElemento ..> SistemaConsultas
@enduml
